# mines-solver

./: .gitignore  Makefile.am  assisted_player.cpp  assisted_player.h  configure.ac  grid.h  manual_player.cpp  manual_player.h  mines.cpp  mines.h  mines_assisted_tui.cpp  mines_tui.cpp  nop_solver.cpp  nop_solver.h  single_cell_solver.cpp  single_cell_solver.h  solver.h  text_ui.cpp  text_ui.h  tui.cpp  tui.h
compat/: Makefile.am  make_unique.h
mines/: mines_assisted_gui.cpp  mines_assisted_tui.cpp  mines_gui.cpp  mines_solver_main.cpp  mines_tui.cpp
mines/compat/: gdk_pixbuf.cpp  gdk_pixbuf.h  make_unique.h
mines/game/: game.cpp  game.h  grid.h
mines/solver/: constraint_analyzer.cpp  constraint_analyzer.h  local.cpp  local.h  nop.cpp  nop.h  region_analyzer.cpp  region_analyzer.h  rule_analyzer.cpp  rule_analyzer.h  single_cell.cpp  single_cell.h  solver.cpp  solver.h
mines/ui/: builder_widget.h  counter.cpp  counter.h  elapsed_time_counter.cpp  elapsed_time_counter.h  game_window.cpp  game_window.h  gtk_ui.cpp  gtk_ui.h  menu.ui  mine_field.cpp  mine_field.h  mines-solver.ui  remaining_mines_counter.cpp  remaining_mines_counter.h  reset_button.cpp  reset_button.h  text_ui.cpp  text_ui.h  ui.cpp  ui.gresource.xml  ui.h
mines/ui/resources/: game_window.ui  menu.ui  mines-solver.ui
